part1/exercise-1.09/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 3004
      protocol: TCP
      targetPort: 3000
